fix: instructions list item spacing

--- a/src/components/instructions/prerequesites/prerequesites.module.css
+++ b/src/components/instructions/prerequesites/prerequesites.module.css
@@ -24,3 +24,7 @@
 .list {
   list-style: none;
 }
+
+.listItem {
+  margin-bottom: 10px;
+}
